--- a/index.html
+++ b/index.html
@@ -307,8 +307,8 @@
 
           <!-- Start Team Item 2 -->
           <div class="column">
-            <img src="https://www.mc-heads.net/avatar/854fd204-08f1-4c87-958a-79a2c8d1dfd0/150" alt="Steve's head">
-            <h6 class="is-6 has-small-margin-top">Owner <span class="has-text-weight-normal">/ Naruto_Uzmaki1</span></h6>
+            <img src="#" alt="Steve's head">
+            <h6 class="is-6 has-small-margin-top">Manager <span class="has-text-weight-normal">/ Player</span></h6>
           </div>
           <!-- End Team Item 2 -->
 
@@ -327,8 +327,8 @@
 
           <!-- Start Team Item 4 -->
           <div class="column">
-            <img src="https://www.mc-heads.net/avatar/8667ba71b85a4004af54457a9734eed7/150" alt="Steve's head">
-            <h6 class="is-6 has-small-margin-top">Helper <span class="has-text-weight-normal">/ Player</span></h6>
+            <img src="https://www.mc-heads.net/avatar/854fd204-08f1-4c87-958a-79a2c8d1dfd0/150" alt="Steve's head">
+            <h6 class="is-6 has-small-margin-top">Helper <span class="has-text-weight-normal">/ Naruto_Uzmaki1</span></h6>
           </div>
           <!-- End Team Item 4 -->
 
